# mediapipe_ros

./: .gitignore  CMakeLists.txt  README.md  package.xml  requirements.in  requirements.txt
msg/: Hand.msg
scripts/: hand_gesture.py  hand_gesture_ros.py  sample_hand.py
