<?xml version="1.0"?>
<package format="1">
  <name>mediapipe_ros</name>
  <version>1.0.0</version>
  <description>The mediapipe_ros package</description>

  <maintainer email="chou@jsk.imi.i.u-tokyo.ac.jp">chou</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>python3-catkin-pkg-modules</buildtool_depend>
  <build_depend version_gte="0.6.1">catkin_virtualenv</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>python3-rospkg-modules</run_depend>
  <run_depend>python3-empy</run_depend>
  <run_depend>python3-numpy</run_depend>
  <run_depend>python3-setuptools</run_depend>
  <run_depend>resource_retriever</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
